cluster/hci/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: hci
  labels:
    app: backend
    service: web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      namespace: hci
      labels:
        app: backend
        service: web
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      containers:
        - name: backend
          image: ghcr.io/gatorcomputerinteraction/db-backend:v0.2.1
          ports:
            - containerPort: 80
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: hci
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: backend
