cluster/hci/psql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db-endpoint
  namespace: hci
  annotations:
    external-dns.alpha.kubernetes.io/hostname: db.hci.realliance.net
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: psql
  selector:
    app: acid-database
  type: LoadBalancer
