cluster/hci/scheduler.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  namespace: hci
  labels:
    app: scheduler
    service: web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      namespace: hci
      labels:
        app: scheduler
        service: web
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
      containers:
        - name: scheduler
          image: ghcr.io/gatorcomputerinteraction/schedule-engine:v0.7.0
          volumeMounts:
            - mountPath: /tmp
              name: tmp
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler
  namespace: hci
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: scheduler
