cluster/hci/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hci
  namespace: hci
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - api.hci.realliance.net
      secretName: hci-tls-tls
  rules:
    - host: api.hci.realliance.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
